--- a/po/fi-FI-marc-MARC21.po
+++ b/po/fi-FI-marc-MARC21.po
@@ -36,7 +36,7 @@ msgstr "!'()*-.0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ_abcdefghijklmnopqrstuvwxyz~"
 #: intranet-tmpl/prog/en/modules/cataloguing/value_builder/marc21_field_008_authorities.tt
 #, c-format
 msgid "#- National bibliographic agency"
-msgstr "#- Kansallisbibliografiaa"
+msgstr "#- Kansallisbibliografiazzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
 
 #. For the first occurrence,
 #. SCRIPT
