--- a/po/fi-FI-staff-prog.po
+++ b/po/fi-FI-staff-prog.po
@@ -28437,7 +28437,7 @@ msgid ""
 msgstr ""
 "Havaittu epäjohdonmukaisuus. Superlibrarian-oikeus sulkee pois muut "
 "oikeudet, koska se sisältää jo itsessään ne kaikki. Tämän käyttäjän "
-"käyttäjäoikeudeksi asetetaan vain \"superlibrarian\"."
+"käyttäjäoikeudeksi asetetaan vain superlibrarian."
 
 #. SCRIPT
 #: intranet-tmpl/prog/en/includes/cateditor-ui.inc
