--- a/po/fi-FI-pref.po
+++ b/po/fi-FI-pref.po
@@ -1,17 +1,17 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2015-04-15 09:41-0300\n"
-"PO-Revision-Date: 2017-10-10 12:34+0000\n"
+"PO-Revision-Date: 2018-05-29 12:26+0300\n"
 "Last-Translator: AnneliÖ <anneli.osterman@ouka.fi>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 2.5.1.1\n"
+"X-Generator: Poedit 2.0.2\n"
 "X-POOTLE-MTIME: 1507638846.000000\n"
+"Language-Team: \n"
 
 # Acquisitions
 # Acquisitions
@@ -3841,7 +3841,7 @@ msgstr "MANUAL_INV-maksut kun lasketaan maksuja yhteen."
 # Circulation > Checkout Policy
 # Circulation > Checkout Policy
 msgid "circulation.pref#NoIssuesChargeGuarantees# Prevent a patron from checking out if the patron has guarantees owing in total more than"
-msgstr "Estä asiakasta lainaamasta, jos hänen takaajalla on maksuja enemmän kuin"
+msgstr "Estä asiakasta lainaamasta, jos hänen taattavilla on maksuja enemmän kuin"
 
 # Circulation > Checkout Policy
 # Circulation > Checkout Policy
@@ -9467,7 +9467,7 @@ msgstr "Virkailijaliittymän hakutulosten oletusjärjestys on"
 # Searching > Results Display
 # Searching > Results Display
 msgid "searching.pref#defaultSortField# ascending."
-msgstr "laskeva järjestys / uusimmat ensin."
+msgstr "nouseva järjestys / uusimmat ensin."
 
 # Searching > Results Display
 # Searching > Results Display
@@ -9492,7 +9492,7 @@ msgstr "julkaisuajan mukaan"
 # Searching > Results Display
 # Searching > Results Display
 msgid "searching.pref#defaultSortField# descending."
-msgstr "nousevassa järjestyksessä / vanhimmat ensin."
+msgstr "laskeva järjestys / vanhimmat ensin."
 
 # Searching > Results Display
 # Searching > Results Display
@@ -10615,4 +10615,3 @@ msgstr "Palauta vain"
 # Web services > Reporting
 msgid "web_services.pref#SvcMaxReportRows# rows of a report requested via the reports web service."
 msgstr "riviä raportista, joka on tehty nettipalvelun kautta."
-
