Fix translation error, again

--- a/po/fi-FI-marc-MARC21.po
+++ b/po/fi-FI-marc-MARC21.po
@@ -11278,7 +11278,7 @@ msgstr "tekijä"
 #: opac-tmpl/bootstrap/en/xslt/MARC21slim2OPACDetail.xsl
 #, c-format
 msgid "av"
-msgstr "/"
+msgstr "av"
 
 #: intranet-tmpl/prog/en/xslt/MARC21slim2intranetResults.xsl
 #: opac-tmpl/bootstrap/en/xslt/MARC21slim2OPACResults.xsl
