#3006 Fixed translation error
Word decrease was translated as 'pidennä' when it should be translated as 'lyhennä'.

--- a/po/fi-FI-staff-prog.po
+++ b/po/fi-FI-staff-prog.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2018-09-17 10:31+0300\n"
-"PO-Revision-Date: 2018-11-12 11:00+0200\n"
+"PO-Revision-Date: 2018-11-19 11:01+0200\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: \n"
 "Language: fi\n"
@@ -21844,7 +21844,7 @@ msgstr "Älä lyhennä laina-aikaa varausten määrän pohjalta"
 #: intranet-tmpl/prog/en/modules/circ/circulation.tt
 #, c-format
 msgid "Don't decrease loan length based on holds"
-msgstr "Älä pidennä laina-aikaa varausten pohjalta"
+msgstr "Älä lyhennä laina-aikaa varausten pohjalta"
 
 #: intranet-tmpl/prog/en/modules/tools/export.tt
 #: intranet-tmpl/prog/en/includes/checkouts-table.inc
