#3006 Thaimaalainen changed to thai

--- a/po/fi-FI-marc-MARC21.po
+++ b/po/fi-FI-marc-MARC21.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2018-09-17 10:31+0300\n"
-"PO-Revision-Date: 2018-09-19 14:22+0300\n"
+"PO-Revision-Date: 2018-11-20 08:46+0200\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: \n"
 "Language: fi\n"
@@ -7722,7 +7722,7 @@ msgstr "Teksti"
 #: intranet-tmpl/prog/en/xslt/MARC21Languages.xsl
 #, c-format
 msgid "Thai"
-msgstr "thaimaalainen"
+msgstr "thai"
 
 #: intranet-tmpl/prog/en/data/marc21_field_006.xml
 #: intranet-tmpl/prog/en/data/marc21_field_008.xml
