--- a/po/fi-FI-pref.po
+++ b/po/fi-FI-pref.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2015-04-15 09:41-0300\n"
-"PO-Revision-Date: 2019-04-24 16:15+0300\n"
+"PO-Revision-Date: 2019-05-15 13:59+0300\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
@@ -3427,19 +3427,19 @@ msgstr "lainausmaksut kun lasketaan maksuja yhteen."
 
 # Circulation > Checkin Policy
 msgid "circulation.pref#RequireSCCheckInBeforeNotifyingPickups# Do"
-msgstr ""
+msgstr "Vaadi"
 
 # Circulation > Checkin Policy
 msgid "circulation.pref#RequireSCCheckInBeforeNotifyingPickups# Don't"
-msgstr ""
+msgstr "Älä vaadi"
 
 # Circulation > Checkin Policy
 msgid "circulation.pref#RequireSCCheckInBeforeNotifyingPickups# If set to 'Do', the items checked in with SCO/SIP will be 'in transit' until they're checked in again with staff client."
-msgstr ""
+msgstr "Jos asetetaan \"Vaadi\", SCO/SIP:n välityksellä palautetut niteet menevät kuljetustilaan, kunnes ne on palautettu uudelleen virkailijaliittymässä."
 
 # Circulation > Checkin Policy
 msgid "circulation.pref#RequireSCCheckInBeforeNotifyingPickups# require reserved items to be checked in with staff client before sending pickup notifications."
-msgstr ""
+msgstr "varatun aineiston palauttamista virkailijaliittymässä ennen noutoilmoituksen lähettämistä."
 
 # Circulation > Holds Policy
 msgid "circulation.pref#ReservesControlBranch# Check the"
@@ -8527,4 +8527,3 @@ msgstr "Palauta vain"
 # Web services > Reporting
 msgid "web_services.pref#SvcMaxReportRows# rows of a report requested via the reports web service."
 msgstr "riviä raportista, joka on tehty nettipalvelun kautta."
-
