--- a/po/fi-FI-pref.po
+++ b/po/fi-FI-pref.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2015-04-15 09:41-0300\n"
-"PO-Revision-Date: 2019-05-15 13:59+0300\n"
+"PO-Revision-Date: 2019-07-16 15:49+0300\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
@@ -247,7 +247,7 @@ msgstr "CAS-tunnistautuminen"
 
 # Administration > Encryption options
 msgid "admin.pref Encryption options"
-msgstr ""
+msgstr "Salausasetukset"
 
 # Administration > Google OpenID Connect
 msgid "admin.pref Google OpenID Connect"
@@ -359,51 +359,51 @@ msgstr "Kirjautuneen kirjaston"
 
 # Administration > Encryption options
 msgid "admin.pref#EncryptionConfiguration# # <em>'cipher-algorithm'</em> defaults to AES-256. Algorithm to be used to make symmetric encryptions.<br/>"
-msgstr ""
+msgstr "# <em>'cipher-algorithm'</em> oletuksena AES-256. Käytettävä algoritmi, kun halutaan symmetrisiä salauksia.<br/>"
 
 # Administration > Encryption options
 msgid "admin.pref#EncryptionConfiguration# # <em>'passphrase'</em> is mandatory. This is used to secure symmetric encryptions that are <br/>"
-msgstr ""
+msgstr "# <em>'passphrase'</em>on pakollinen. Tätä käytetään turvaamaan symmetrisiä salauksia, jotka <br/>"
 
 # Administration > Encryption options
 msgid "admin.pref#EncryptionConfiguration# # encrypted and decrypted using this same passphrase. <br/>"
-msgstr ""
+msgstr "# salataan ja puretaan salaus käyttämällä tätä samaa tunnuslausetta. <br/>"
 
 # Administration > Encryption options
 msgid "admin.pref#EncryptionConfiguration# --- </br>"
-msgstr ""
+msgstr "--- </br>"
 
 # Administration > Encryption options
 msgid "admin.pref#EncryptionConfiguration# </code><br/>"
-msgstr ""
+msgstr "</code><br/>"
 
 # Administration > Encryption options
 msgid "admin.pref#EncryptionConfiguration# <br/>"
-msgstr ""
+msgstr "<br/>"
 
 # Administration > Encryption options
 msgid "admin.pref#EncryptionConfiguration# <code> </br>"
-msgstr ""
+msgstr "<code> </br>"
 
 # Administration > Encryption options
 msgid "admin.pref#EncryptionConfiguration# Configurations are given as YAML.<br/>"
-msgstr ""
+msgstr "Konfiguraatio tehdään käyttäen YAMLia. <br/>"
 
 # Administration > Encryption options
 msgid "admin.pref#EncryptionConfiguration# Encryption configuration for tasks that encrypt files with gpg or gpg2 -programs."
-msgstr ""
+msgstr "Salausasetukset tehtäville, jotka salaavat tiedostoja gpg- tai gpg2 -ohjelmilla."
 
 # Administration > Encryption options
 msgid "admin.pref#EncryptionConfiguration# cipher-algorithm: AES-256 </br>"
-msgstr ""
+msgstr "cipher-algorithm: AES-256 </br>"
 
 # Administration > Encryption options
 msgid "admin.pref#EncryptionConfiguration# eg.<br/>"
-msgstr ""
+msgstr "<br/>"
 
 # Administration > Encryption options
 msgid "admin.pref#EncryptionConfiguration# passphrase: abrakadabra simsalapim<br/>"
-msgstr ""
+msgstr "tunnuslause: abrakadabra simsalapim<br/>"
 
 # Administration > Google OpenID Connect
 msgid "admin.pref#GoogleOAuth2ClientID# Google OAuth2 Client ID: "
@@ -1699,7 +1699,7 @@ msgstr "Vienti"
 
 # Cataloging > Holdings
 msgid "cataloguing.pref Holdings"
-msgstr ""
+msgstr "Varastotietueet"
 
 # Cataloging > Importing
 msgid "cataloguing.pref Importing"
@@ -2155,15 +2155,15 @@ msgstr "Listaa esitäytettävät niteen osakentät (erottele välilyönnein)"
 
 # Cataloging > Holdings
 msgid "cataloguing.pref#SummaryHoldings# Don't use"
-msgstr ""
+msgstr "Käytä"
 
 # Cataloging > Holdings
 msgid "cataloguing.pref#SummaryHoldings# Use"
-msgstr ""
+msgstr "Käytä"
 
 # Cataloging > Holdings
 msgid "cataloguing.pref#SummaryHoldings# summary holdings records."
-msgstr ""
+msgstr "varastotietueita."
 
 # Cataloging > Record Structure
 msgid "cataloguing.pref#UNIMARCField100Language# Use the languague (ISO 690-2)"
@@ -3595,127 +3595,127 @@ msgstr "Käytä seuraavia JavaScript-komentoja kaikilla sivuilla itsepalvelulain
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSBlockCleanOlderThanThis# Clean expired self-service branch-specific access blocks older than this many days. You must enable access rule \"BranchBlock\" in syspref \"SSRules\" for this to have effect."
-msgstr ""
+msgstr "Poista vanhentuneet omatoimen kirjastokohtaiset pääsyrajoitteet, jotka ovat tätä vanhempia. Sinun pitää sallia \"BranchBlock\"-sääntö \"SSRules\"-järjestelmäasetuksessa, jotta tämä asetus toimii."
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSBlockDefaultDuration# Self-service branch-specific access block default duration in days. You must enable access rule \"BranchBlock\" in syspref \"SSRules\" for this to have effect."
-msgstr ""
+msgstr "Omatoimen kirjastokohteisten pääsyrajoitteiden oletuskesto päivinä. Sinun pitää sallia \"BranchBlock\"-sääntö \"SSRules\"-järjestelmäasetuksessa, jotta tämä asetus toimii."
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# # Allows only the listed borrower categories. <br/>"
-msgstr ""
+msgstr "Sallii vain listatut asiakastyypit. <br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# # Blocks access during access times not allowed in the syspref 'OpeningHours' <br/>"
-msgstr ""
+msgstr "Estää pääsyn muina aikoina kuin mitä on määritetty järjestelmäasetuksessa 'OpeningHours' <br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# # Blocks if the user is younger than this <br/>"
-msgstr ""
+msgstr "Estää pääsyn, jos käyttäjä on nuorempi kuin tässä määritetty <br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# # Blocks users with more fines than the system preference 'noissuescharge' <br/>"
-msgstr ""
+msgstr "Estää pääsyn, jos käyttäjällä on maksuja enemmän kuin 'noissuecharge'-järjestelmäasetuksessa on määritetty. <br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# # Borrower extended attribute SSBAN is not set <br/>"
-msgstr ""
+msgstr "Asiakasmääre SSBAN ei ole asetettu <br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# # Borrower extended attribute SST&C (Terms and conditions) must be accepted <br/>"
-msgstr ""
+msgstr "Asiakasmääre SST&C (Terms and conditions) pitää olla hyväksytty <br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# # Checks generic limitations, is the card lost, is the account debarred, is the card expired <br/>"
-msgstr ""
+msgstr "Tarkistaa yleisrajoitteet, onko kortti kadonnut, onko rajoitteita tai onko kortti vanhentunut <br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# # How the codes are separated, is not important. The list is scanned from left to right for </br>"
-msgstr ""
+msgstr "Se, miten koodit erotetaan toisistaan, ei ole tärkeää. Lista käydään läpi vasemmalta oikealle"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# # This is not used when generating daily block lists, even when defined. <br/>"
-msgstr ""
+msgstr "Tätä ei käytetä, jos käytetään päivittäistä estolistojen generointia, vaikka tässä olisi määritys. <br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# # Use Branch-specific blocks for Borrowers. Set them from the members/moremember.pl -page. <br/>"
-msgstr ""
+msgstr "Käytä asiakkaiden kirjastokohtaisia estoja. Ne asetetaan sivulta members/moremember.pl. <br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# # text matching the users categorycode. <br/>"
-msgstr ""
+msgstr "etsien tekstivastaavuuksia asiakastyyppien koodeista."
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# --- <br/>"
-msgstr ""
+msgstr "--- <br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# </code><br/><br/>"
-msgstr ""
+msgstr "</code><br/><br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# BorrowerCategories: PATRON STAFF LIB <br/>"
-msgstr ""
+msgstr "BorrowerCategories: HENKILO LAPSI <br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# BranchBlock: 1 <br/>"
-msgstr ""
+msgstr "BranchBlock: 1 <br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# CardExpired: 1 </br>"
-msgstr ""
+msgstr "CardExpired: 1 </br>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# CardLost: 1 </br>"
-msgstr ""
+msgstr "CardLost: 1 </br>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# Debarred: 1 </br>"
-msgstr ""
+msgstr "Debarred: 1 </br>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# Each rule/check in the example triggers a specific test in the Self-service access rules checking module 'C4::SelfService'. <br/>"
-msgstr ""
+msgstr "Jokainen esimerkin sääntö aiheuttaa tietyn testin omatoimen pääsyn tarkistusmoduulissa 'C4::SelfService'. <br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# Example:<br/></br><code>"
-msgstr ""
+msgstr "Esimerkki:<br/></br><code>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# MaxFines: 1 <br/>"
-msgstr ""
+msgstr "MaxFines: 1 <br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# MinimumAge: 15 <br/>"
-msgstr ""
+msgstr "MinimumAge: 15 <br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# OpeningHours: 1 <br/>"
-msgstr ""
+msgstr "OpeningHours: 1 <br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# Permission: 1 <br/>"
-msgstr ""
+msgstr "Permission: 1 <br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# Self-service resource usage rules and checks.<br/>"
-msgstr ""
+msgstr "Omatoimikäytön säännöt ja tarkistukset. <br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# TaC: 1 <br/>"
-msgstr ""
+msgstr "TaC: 1 <br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# The rules are YAML-formatted. <br/>"
-msgstr ""
+msgstr "Säännöt ovat YAML-muodossa. <br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# Used by the /borrowers/ssstatus-endpoint (real-time self-service access check) and block list generation cronjob self_service_lists.pl <br/>"
-msgstr ""
+msgstr "/borrowers/ssstatus-endpoint (ajantasainen omatoimen käyttöoikeuden tarkistus) käyttää tätä asetusta luodessaan self_service_lists.pl -ajastetulla ajolla estolistan<br/>"
 
 # Circulation > Self-Service API
 msgid "circulation.pref#SSRules# You can configure how your library limits self-service access by choosing your own mix of rules. <br/>"
-msgstr ""
+msgstr "Voit määritellä kuinka kirjastossasi rajoitetaan omatoimen pääsyä määrittämällä haluamasi säännöt. <br/>"
 
 # Circulation > Self Checkout
 msgid "circulation.pref#SelfCheckHelpMessage# Include the following HTML in the Help page of the web-based self checkout system:"
@@ -8691,4 +8691,3 @@ msgstr "Palauta vain"
 # Web services > Reporting
 msgid "web_services.pref#SvcMaxReportRows# rows of a report requested via the reports web service."
 msgstr "riviä raportista, joka on tehty nettipalvelun kautta."
-
