--- a/po/fi-FI-marc-MARC21.po
+++ b/po/fi-FI-marc-MARC21.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2019-07-11 22:44+0300\n"
-"PO-Revision-Date: 2019-07-12 11:01+0300\n"
+"PO-Revision-Date: 2019-07-23 12:32+0300\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: \n"
 "Language: fi\n"
@@ -2095,7 +2095,7 @@ msgstr "assami"
 #: intranet-tmpl/prog/en/xslt/MARC21slimUtils.xsl
 #, c-format
 msgid "Associated place: "
-msgstr "Liittyvä paikka: "
+msgstr "Luontipaikka: "
 
 #: intranet-tmpl/prog/en/xslt/MARC21Languages.xsl
 #, c-format
