Fix translation for 000/06 value y

--- a/po/fi-FI-marc-MARC21.po
+++ b/po/fi-FI-marc-MARC21.po
@@ -15764,7 +15764,7 @@ msgstr "x- Soveltumaton"
 #: intranet-tmpl/prog/en/modules/cataloguing/value_builder/marc21_leader_holdings.tt
 #, c-format
 msgid "y - Serial item holdings"
-msgstr "v - Varastotiedot liittyvät moniosaiseen monografiaan"
+msgstr "y - Varastotiedot liittyvät kausijulkaisuun"
 
 #: intranet-tmpl/prog/en/modules/cataloguing/value_builder/marc21_field_008_holdings.tt
 #, c-format
