--- a/po/fi-FI-marc-MARC21.po
+++ b/po/fi-FI-marc-MARC21.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2019-07-11 22:44+0300\n"
-"PO-Revision-Date: 2019-07-23 12:32+0300\n"
-"Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
+"PO-Revision-Date: 2019-08-21 13:46+0300\n"
+"Last-Translator: Ere Maijala <ere.maijala@helsinki.fi>\n"
 "Language-Team: \n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.2\n"
+"X-Generator: Poedit 2.2.3\n"
 "X-POOTLE-MTIME: 1507730673.000000\n"
 
 #: intranet-tmpl/prog/en/xslt/MARC21slimUtils-MODS31.xsl
@@ -15764,7 +15764,7 @@ msgstr "x- Soveltumaton"
 #: intranet-tmpl/prog/en/modules/cataloguing/value_builder/marc21_leader_holdings.tt
 #, c-format
 msgid "y - Serial item holdings"
-msgstr "v - Varastotiedot liittyvät moniosaiseen monografiaan"
+msgstr "y - Varastotiedot liittyvät kausijulkaisuun"
 
 #: intranet-tmpl/prog/en/modules/cataloguing/value_builder/marc21_field_008_holdings.tt
 #, c-format
