#3006 Varastotietueen suomennoksen korjaus
Varastotietueen suomennoksen korjaus ym.

--- a/po/fi-FI-staff-prog.po
+++ b/po/fi-FI-staff-prog.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2019-07-11 22:44+0300\n"
-"PO-Revision-Date: 2019-09-03 15:12+0300\n"
+"PO-Revision-Date: 2019-09-20 10:12+0300\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: \n"
 "Language: fi\n"
@@ -36572,7 +36572,7 @@ msgstr "Osumia ei löytynyt"
 #. SCRIPT
 #: intranet-tmpl/prog/en/includes/datatables.inc
 msgid "No matching records found"
-msgstr "Vastaavia tietueita ei löytynyt"
+msgstr "Vastaavia tietoja ei löytynyt"
 
 #. SCRIPT
 #: intranet-tmpl/prog/en/modules/reports/guided_reports_start.tt
@@ -43131,7 +43131,7 @@ msgstr "Avaa uudelleen"
 #: intranet-tmpl/prog/en/modules/acqui/basket.tt
 #, c-format
 msgid "Reopen this basket"
-msgstr "Avaa tämä tilausryhmä uudelleen"
+msgstr "Avaa tämä tilauskori uudelleen"
 
 #: intranet-tmpl/prog/en/modules/acqui/basketgroup.tt
 #, c-format
