#3006 Tietueen eräpoistossa käännösvirhe
"Subscription" oli käännetty muotoon "tilaus", kun se olisi pitänyt olla muodossa "lehtitilaus".

--- a/po/fi-FI-staff-prog.po
+++ b/po/fi-FI-staff-prog.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2019-07-11 22:44+0300\n"
-"PO-Revision-Date: 2019-09-20 10:12+0300\n"
+"PO-Revision-Date: 2019-12-30 14:05+0200\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: \n"
 "Language: fi\n"
@@ -42820,8 +42820,8 @@ msgid ""
 "Reminder: this action will delete all selected bibliographic records, "
 "attached subscriptions, existing holds, and attached items!"
 msgstr ""
-"Muistutus: tämä toiminto poistaa kaikki valitut nimeketietueet, liittyvät "
-"tilaukset, olemassa olevat varaukset ja liitetyt niteet."
+"Muistutus: tämä toiminto poistaa kaikki valitut nimeketietueet ja niihin "
+"liittyvät lehtitilaukset, olemassa olevat varaukset ja niteet."
 
 #: intranet-tmpl/prog/en/modules/tools/batch_record_modification.tt
 #, c-format
