#3006 Translation error in previousIssuesDefaultSortOrder

--- a/po/fi-FI-pref.po
+++ b/po/fi-FI-pref.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2015-04-15 09:41-0300\n"
-"PO-Revision-Date: 2019-12-19 12:24+0200\n"
+"PO-Revision-Date: 2020-02-12 14:10+0200\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
@@ -4179,7 +4179,7 @@ msgstr "viimeisintä palautusta palautusnäytöllä."
 
 # Circulation > Interface
 msgid "circulation.pref#previousIssuesDefaultSortOrder# Sort previous checkouts on the circulation page from"
-msgstr "Lajittele edelliset palautukset lainausnäytöllä"
+msgstr "Lajittele edelliset lainat lainausnäytöllä"
 
 # Circulation > Interface
 msgid "circulation.pref#previousIssuesDefaultSortOrder# due date."
