#3006 Fixing some translation errors

--- a/po/fi-FI-pref.po
+++ b/po/fi-FI-pref.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2015-04-15 09:41-0300\n"
-"PO-Revision-Date: 2020-06-11 08:35+0300\n"
+"PO-Revision-Date: 2020-07-27 08:32+0300\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
@@ -7804,7 +7804,7 @@ msgstr "Virkailijaliittymän hakutulosten oletusjärjestys on"
 
 # Searching > Results Display
 msgid "searching.pref#defaultSortField# ascending."
-msgstr "nouseva järjestys / uusimmat ensin."
+msgstr "nouseva järjestys / vanhimmat ensin."
 
 # Searching > Results Display
 msgid "searching.pref#defaultSortField# author"
@@ -7824,7 +7824,7 @@ msgstr "julkaisuajan mukaan"
 
 # Searching > Results Display
 msgid "searching.pref#defaultSortField# descending."
-msgstr "laskeva järjestys / vanhimmat ensin."
+msgstr "laskeva järjestys / uusimmat ensin."
 
 # Searching > Results Display
 msgid "searching.pref#defaultSortField# from A to Z."
