--- a/po/fi-FI-marc-MARC21.po
+++ b/po/fi-FI-marc-MARC21.po
@@ -7,16 +7,18 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2019-07-11 22:44+0300\n"
-"PO-Revision-Date: 2019-10-16 16:23+0300\n"
-"Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
+"PO-Revision-Date: 2021-04-13 11:21+0300\n"
+"Last-Translator: Anneli Österman <anneli.osterman@koha-suomi.fi>\n"
 "Language-Team: \n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.2\n"
-"X-POOTLE-MTIME: 1507730673.000000\n"
+"X-Generator: Poedit 2.4.1\n"
+"X-POOTLE-MTIME: 1564909125.453899\n"
+"X-Pootle-Path: /fi/20.05/fi-FI-marc-MARC21.po\n"
+"X-Pootle-Revision: 1\n"
 
 #: intranet-tmpl/prog/en/xslt/MARC21slimUtils-MODS31.xsl
 #, c-format
@@ -439,7 +441,7 @@ msgstr "0-4 Tietueen pituus"
 #. SCRIPT
 #: intranet-tmpl/prog/en/modules/cataloguing/value_builder/marc21_field_007.tt
 msgid "00 Category of material"
-msgstr "00 Aineistolaji"
+msgstr "00 Aineistotyyppi"
 
 #: intranet-tmpl/prog/en/modules/cataloguing/value_builder/marc21_field_008_holdings.tt
 #, c-format
@@ -1946,7 +1948,7 @@ msgstr "algonkin-kielet"
 #: intranet-tmpl/prog/en/modules/cataloguing/value_builder/marc21_linking_section.tt
 #, c-format
 msgid "All Item Types"
-msgstr "Kaikki aineistotyypit"
+msgstr "Kaikki nidetyypit"
 
 #: intranet-tmpl/prog/en/xslt/MARC21Languages.xsl
 #, c-format
@@ -4497,12 +4499,12 @@ msgstr "Kohde on musiikkiäänite"
 #: intranet-tmpl/prog/en/modules/cataloguing/value_builder/marc21_linking_section.tt
 #, c-format
 msgid "Item type"
-msgstr "Aineistolaji"
+msgstr "Nidetyyppi"
 
 #: intranet-tmpl/prog/en/xslt/MARC21slim2intranetDetail.xsl
 #, c-format
 msgid "Item type: "
-msgstr "Aineistolaji: "
+msgstr "Aineistotyyppi: "
 
 #: opac-tmpl/bootstrap/en/xslt/MARC21slim2OPACResults.xsl
 #, c-format
@@ -5342,7 +5344,7 @@ msgstr "Messut"
 #: opac-tmpl/bootstrap/en/xslt/MARC21slim2OPACDetail.xsl
 #, c-format
 msgid "Material type: "
-msgstr "Aineistolaji: "
+msgstr "Aineistotyyppi: "
 
 #: intranet-tmpl/prog/en/xslt/MARC21Languages.xsl
 #, c-format
